Fixed scrollbar in homepage

--- a/app/pages/home/home.scss
+++ b/app/pages/home/home.scss
@@ -147,7 +147,7 @@
 	width: 300px;
 	padding: 0 10px;
 	background-color: rgba(0, 0, 0, 0.5);
-	overflow: scroll;
+	overflow: auto;
 	color: #fff;
 	line-height: 5px;
 }
